--- a/accounts/templates/accounts/registration/signup.html
+++ b/accounts/templates/accounts/registration/signup.html
@@ -11,15 +11,6 @@
 
 <div class="cuerpo-accounts">
     <div class="">
-        <!--<form method="POST">
-            {% csrf_token %}
-            {{form}}
-        
-            <button>
-                Signup
-            </button>
-        </form>-->
-
         <div class="vidrio-blur p-4 mt-3">
             <form method="POST">
                 {% csrf_token %}             
@@ -30,6 +21,9 @@
                         </div>
                         <div class="mb-2" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ field.help_text }}">
                             {{ field }}
+                            {% if field.errors %}
+                                <span class="text-danger">{{ field.errors }}</span>
+                            {% endif %}
                         </div>
                     </div>
                 {% endfor %}
@@ -41,26 +35,12 @@
         </div>
     </div>
 
-<!---->
-
-        
-
     <div class="mt-3">
-        <!--{% if messages %}
-            <ul class="messages">
-                {% for message in messages %}
-                    <li{% if message.tags %} class="{{ message.tags }}" {% endif %}>{{ message }}</li>
-                {% endfor %}
-            </ul>
-        {% endif %}-->
-        
-        {% if messages %}
-            {% for message in messages %}
-                <div class="alert alert-danger alert-dismissible" role="alert">
-                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-                    <strong class="text-dark">{{message}}</strong>
-                </div>
-            {% endfor %}
+        {% if form.non_field_errors %}
+            <div class="alert alert-danger alert-dismissible" role="alert">
+                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                <strong class="text-dark">{{ form.non_field_errors }}</strong>
+            </div>
         {% endif %}
     </div>
 </div>
