--- a/scd/templates/Clase/gestionClase.html
+++ b/scd/templates/Clase/gestionClase.html
@@ -1,4 +1,4 @@
-{% extends "./base.html" %}
+{% extends ".\base.html" %}
 
 {% block title %}Gestion de Clases{% endblock %}
 
@@ -21,13 +21,13 @@
             <div class="modal-dialog">
                 <div class="modal-content vidrio-blur">
                     <div class="modal-header">
-                        <h4 class="modal-title fs-5" id="exampleModalLabel">Registrar Clase:</h4>
+                        <h4 class="modal-title fs-5" id="exampleModalLabel">Registrar Clase</h4>
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
                 <form action="{% url 'registrarClase' %}" method="POST">{% csrf_token %}
                     <div class="form-group mb-1"> <!--LISTA HORARIOS-->
-                        <select class="form-select" aria-label="Default select example" id="id_hor" name="id_hor">
+                        <select class="form-select" aria-label="Default select example" id="id_hor" name="id_hor" required>
                             <option value="" selected disabled>Seleccione un Horario</option>
                             {% for h in horarios %}
                                 <option value="{{h.id_hor}}">Día: {{h.dia}}, del {{h.h_i}}° al {{h.h_f}}° modulo.</option>  
@@ -35,7 +35,7 @@
                         </select>
                     </div>
                     <div class="form-group mb-1"> <!--LISTA CURSOS-->
-                        <select class="form-select" aria-label="Default select example" id="id_cur" name="id_cur">
+                        <select class="form-select" aria-label="Default select example" id="id_cur" name="id_cur" required>
                             <option value="" selected disabled>Seleccione un Curso</option>
                             {% for c in cursos %}
                                 <option value="{{c.id_cur}}">{{c.anio}}° {{c.division}}° {{c.especialidad}}, Turno: {{c.turno}}.</option>
@@ -43,7 +43,7 @@
                         </select>
                     </div>
                     <div class="form-group mb-1"> <!--LISTA DOC_MAT-->
-                        <select class="form-select" aria-label="Default select example" id="id_dm" name="id_dm">
+                        <select class="form-select" aria-label="Default select example" id="id_dm" name="id_dm" required>
                             <option value="" selected disabled>Seleccione la Materia de un Docente</option>
                             {% for dm in DMs %}
                                 <option value="{{dm.id_dm}}">{{dm.id_mat.nombre}} - {{dm.id_doc.apellido | upper}} {{dm.id_doc.nombre}}</option>
@@ -65,12 +65,12 @@
 <div class="">
     <div class="row">
         <div class="col mb-3">
-            <h1>Clases registradas:</h1>
+            <h1>Clases registradas</h1>
         </div>
         <div class="col"> <!--VISUALIZACION MENSAJES-->
             {% if messages %}
                 {% for message in messages %}
-                    <div class="alert {% if message.tags == 'success' %}alert-success{% elif message.tags == 'error' %}alert-danger{% elif message.tags == 'info' %}alert-info{% endif %} alert-dismissible" role="alert">
+                    <div class="alert {% if message.tags == 'success' %}alert-success{% elif message.tags == 'error' %}alert-danger{% elif message.tags == 'warning' %}alert-warning{% elif message.tags == 'info' %}alert-info{% endif %} alert-dismissible" role="alert">
                         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
                         <strong>{{ message }}</strong>
                     </div>
@@ -84,34 +84,42 @@
                 <thead>
                      <tr>
                         <th class="col txt-datos">#</th>
-                        <th class="col txt-datos" >ID Clase</th>
-                        <th class="col txt-datos">Horario</th>
+                        <th class="col txt-datos" hidden>ID Clase</th>
+                        <th class="col txt-datos">Dia y Horario</th>
+                        <th class="col txt-datos">Docente</th>
+                        <th class="col txt-datos">Materia</th>
                         <th class="col txt-datos">Curso</th>
-                        <th class="col txt-datos">Materia y Docente</th>
-                        <th class="col txt-datos">Opciones</th>
+                        <th class="col txt-datos">Turno</th>
+                        <th class="col-1 txt-datos">Opciones</th>
                     </tr>
                 </thead>
                 <tbody class="table-group-divider border-light">
                     {% for c in clases %}
                     <tr>
                         <td class="txt-datos txt-centrado">{{forloop.counter}}</td>
-                        <td class="txt-datos txt-centrado" >{{c.id_cla}}</td>
-                        <td class="txt-datos txt-centrado">{{c.id_hor.dia}}, {{c.id_hor.h_i}}° - {{c.id_hor.h_f}}° mod.</td>
-                        <td class="txt-datos txt-centrado">{{c.id_cur.anio}}° {{c.id_cur.division}}° {{c.id_cur.especialidad}}, {{c.id_cur.turno}}.</td>
-                        <td class="txt-datos">{{c.id_dm.id_mat.nombre}} - {{c.id_dm.id_doc.apellido | upper}} {{c.id_dm.id_doc.nombre}}</td>
+                        <td class="txt-datos txt-centrado" hidden>{{c.id_cla}}</td>
+                        <td class="txt-datos txt-centrado"><strong>{{c.id_hor.dia}}</strong>, {{c.id_hor.h_i}}°- {{c.id_hor.h_f}}° mod.</td>
+                        <td class="txt-datos"><strong>{{c.id_dm.id_doc.apellido | upper}}</strong>, {{c.id_dm.id_doc.nombre}}</td>
+                        <td class="txt-datos">{{c.id_dm.id_mat.nombre}}</td>
+                        <td class="txt-datos txt-centrado">{{c.id_cur.anio}}° {{c.id_cur.division}}°, {{c.id_cur.especialidad}}</td>
+                        <td class="txt-datos txt-centrado">{{c.id_cur.turno}}</td>
                         <td class="txt-centrado">
                             <div class="btn-group dropstart">
                                 <button class="btn btn-primary btn-sm dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false"></button>
                                 <ul class="dropdown-menu text-center cuerpo-menu-opciones">
-                                    <li><a href="/edicionClase/{{c.id_cla}}" class="mb-1 dropdown-item bg-primary text-light">
+                                    <li><a href="{% url 'edicionClase' id_cla=c.id_cla %}" class="mb-1 dropdown-item bg-primary text-light">
                                             Modificar
                                         </a>
                                     </li>
                                     <!-- Button trigger modal Eliminar -->
-                                    <li><button type="button" class="dropdown-item bg-danger text-light" data-bs-toggle="modal" data-bs-target="#exampleModal{{c.id_cla}}">
+                                    <li><button type="button" class="mb-1 dropdown-item bg-danger text-light" data-bs-toggle="modal" data-bs-target="#exampleModal{{c.id_cla}}">
                                             Eliminar
                                         </button>
                                     </li>
+                                    <!-- redireccionar a Horario, Docente, Materia -->
+                                    <!--<li><a href="#" class="mb-1 dropdown-item bg-secondary text-light">Ir a Horario</a></li>
+                                    <li><a href="#" class="mb-1 dropdown-item bg-secondary text-light">Ir a Docente</a></li>
+                                    <li><a href="#" class="dropdown-item bg-secondary text-light">Ir a Materia</a></li>-->
                                 </ul>
                             </div>
                         </td>
@@ -135,7 +143,7 @@
                             </div>
                             <div class="modal-footer justify-content-around">
                                     <button type="button" class="btn btn-secondary px-5" data-bs-dismiss="modal">No</button>
-                                    <a href="/eliminarClase/{{c.id_cla}}" class="btn btn-danger">Si</a>
+                                    <a href="{% url 'eliminarClase' id_cla=c.id_cla %}" class="btn btn-danger">Si</a>
                             </div>
                         </div>
                         </div>
