--- a/scd/templates/Curso/edicionCurso.html
+++ b/scd/templates/Curso/edicionCurso.html
@@ -1,17 +1,17 @@
-{% extends "./base.html" %}
+{% extends ".\base.html" %}
 
 {% block title %}Editar Curso{% endblock %}
  
 {% block body %}
 <div class="row">
     <div class="col-md-4 offset-md-4 py-3">
-        <div class="text-center">
+        <div class="text-center mb-4">
             <h2>Edición de datos</h2>
         </div>
         <div class="card vidrio-blur">
             <div class="card-body">
                 <form action="{% url 'editarCurso' %}" method="POST">{% csrf_token %}
-                    <div class="form-group">
+                    <div class="form-group" hidden>
                         <input type="number" id="id_cur" name="id_cur" class="form-control-plaintext text-center" value="{{curso.id_cur}}" readonly>
                     </div>
                     <div class="form-group mb-1">
