--- a/scd/templates/Curso/gestionCurso.html
+++ b/scd/templates/Curso/gestionCurso.html
@@ -1,4 +1,4 @@
-{% extends "./base.html" %}
+{% extends ".\base.html" %}
 
 {% block title %}Gestion de Cursos{% endblock %}
 
@@ -21,7 +21,7 @@
             <div class="modal-dialog">
                 <div class="modal-content vidrio-blur">
                     <div class="modal-header">
-                        <h4 class="modal-title fs-5" id="exampleModalLabel">Registrar Curso:</h4>
+                        <h4 class="modal-title fs-5" id="exampleModalLabel">Registrar Curso</h4>
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
@@ -33,14 +33,14 @@
                         <input type="number" autocomplete="off" id="division" name="division" class="form-control" placeholder="División nro." oninput="javascript: if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);" maxlength="1" required>
                     </div>
                     <div class="form-group mb-1"> <!--LISTA TURNO-->
-                        <select class="form-select" aria-label="Default select example" id="turno" name="turno">
+                        <select class="form-select" aria-label="Default select example" id="turno" name="turno" required>
                             <option value="" selected disabled>Seleccione un Turno</option>
                             <option value="Mañana">Mañana</option>
                             <option value="Tarde">Tarde</option>
                         </select>
                     </div>
                     <div class="form-group mb-1"> <!--LISTA ESPECIALIDAD-->
-                        <select class="form-select" aria-label="Default select example" id="especialidad" name="especialidad">
+                        <select class="form-select" aria-label="Default select example" id="especialidad" name="especialidad" required>
                             <option value="" selected disabled>Seleccione una Especialidad</option>
                             <option value="Básico">Básico</option>
                             <option value="Informática">Informática</option>
@@ -62,12 +62,12 @@
 <div class="">
     <div class="row">
         <div class="col mb-3">
-            <h1>Cursos registrados:</h1>
+            <h1>Cursos registrados</h1>
         </div>
         <div class="col"> <!--VISUALIZACION MENSAJES-->
             {% if messages %}
                 {% for message in messages %}
-                    <div class="alert {% if message.tags == 'success' %}alert-success{% elif message.tags == 'error' %}alert-danger{% elif message.tags == 'info' %}alert-info{% endif %} alert-dismissible" role="alert">
+                    <div class="alert {% if message.tags == 'success' %}alert-success{% elif message.tags == 'error' %}alert-danger{% elif message.tags == 'warning' %}alert-warning{% elif message.tags == 'info' %}alert-info{% endif %} alert-dismissible" role="alert">
                         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
                         <strong>{{ message }}</strong>
                     </div>
@@ -84,9 +84,9 @@
                         <th class="col txt-datos" hidden>ID Curso</th>
                         <th class="col txt-datos">Año</th>
                         <th class="col txt-datos">División</th>
-                        <th class="col txt-datos">Turno</th>
                         <th class="col txt-datos">Especialidad</th>
-                        <th class="col txt-datos">Opciones</th>
+                        <th class="col txt-datos">Turno</th>
+                        <th class="col-1 txt-datos">Opciones</th>
                     </tr>
                 </thead>
                 <tbody class="table-group-divider border-light">
@@ -96,25 +96,21 @@
                         <td class="txt-datos txt-centrado" hidden>{{c.id_cur}}</td>
                         <td class="txt-datos txt-centrado">{{c.anio}}°</td>
                         <td class="txt-datos txt-centrado">{{c.division}}°</td>
-                        <td class="txt-datos txt-centrado">{{c.turno}}</td>
                         <td class="txt-datos txt-centrado">{{c.especialidad}}</td>
+                        <td class="txt-datos txt-centrado">{{c.turno}}</td>
                         <td class="txt-centrado">
                             <div class="btn-group dropstart">
                                 <button class="btn btn-primary btn-sm dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false"></button>
                                 <ul class="dropdown-menu text-center cuerpo-menu-opciones">
-                                    <li><a href="/edicionCurso/{{c.id_cur}}" class="mb-1 dropdown-item bg-primary text-light">
+                                    <li><a href="{% url 'edicionCurso' id_cur=c.id_cur %}" class="mb-1 dropdown-item bg-primary text-light">
                                             Modificar
                                         </a>
                                     </li>
                                     <!-- Button trigger modal Eliminar -->
-                                    <li><button type="button" class="mb-1 dropdown-item bg-danger text-light" data-bs-toggle="modal" data-bs-target="#exampleModal{{c.id_cur}}">
+                                    <li><button type="button" class="dropdown-item bg-danger text-light" data-bs-toggle="modal" data-bs-target="#exampleModal{{c.id_cur}}">
                                             Eliminar
                                         </button>
                                     </li>
-                                    <!-- redireccionar a Horario, Docente, Materia -->
-                                    <li><a href="#" class="mb-1 dropdown-item bg-secondary text-light">Ir a Horario</a></li>
-                                    <li><a href="#" class="mb-1 dropdown-item bg-secondary text-light">Ir a Docente</a></li>
-                                    <li><a href="#" class="dropdown-item bg-secondary text-light">Ir a Materia</a></li>
                                 </ul>
                             </div>
                         </td>
@@ -138,7 +134,7 @@
                             </div>
                             <div class="modal-footer justify-content-around">
                                     <button type="button" class="btn btn-secondary px-5" data-bs-dismiss="modal">No</button>
-                                    <a href="/eliminarCurso/{{c.id_cur}}" class="btn btn-danger">Si</a>
+                                    <a href="{% url 'eliminarCurso' id_cur=c.id_cur %}" class="btn btn-danger">Si</a>
                             </div>
                         </div>
                         </div>
