--- a/scd/templates/DM/edicionDM.html
+++ b/scd/templates/DM/edicionDM.html
@@ -1,17 +1,17 @@
-{% extends "./base.html" %}
+{% extends ".\base.html" %}
 
 {% block title %}Editar Asociación{% endblock %}
 
 {% block body %}
 <div class="row">
     <div class="col-md-4 offset-md-4 py-3">
-        <div class="text-center">
+        <div class="text-center mb-4">
             <h2>Edición de datos</h2>
         </div>
         <div class="card vidrio-blur">
             <div class="card-body">
                 <form action="{% url 'editarDM' %}" method="POST">{% csrf_token %}
-                    <div class="form-group">
+                    <div class="form-group" hidden>
                         <input type="number" id="id_dm" name="id_dm" class="form-control-plaintext text-center" value="{{DM.id_dm}}" readonly>
                     </div>
                     <div class="form-group mb-1"> <!--LISTA DOCENTES-->
